files/etc/iptables.up.rules
#
# iptables firewall
#
*filter

# loopback is free
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow all outbound traffic.
-A OUTPUT -j ACCEPT

# Allow HTTP connections from private net.
-A INPUT -p tcp --dport 80 -s 172.31.32.0/24 -j ACCEPT

# Allow all connections from private net.
-A INPUT -s 172.31.32.0/24 -j ACCEPT

# Allow SSH and mosh connections.
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
-A INPUT -p udp --dport 60000:60020 -j ACCEPT

# Allow ICMP destination unreachable.
-A INPUT -p icmp --icmp-type 3/4 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 3/4 -j ACCEPT
-A FORWARD -p icmp --icmp-type 3/4 -j ACCEPT
-A FORWARD -p icmp --icmp-type 3/3 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 3/3 -j ACCEPT
-A INPUT -p icmp --icmp-type 3/3 -j ACCEPT
-A FORWARD -p icmp --icmp-type 3/1 -j ACCEPT
-A INPUT -p icmp --icmp-type 3/1 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 3/1 -j ACCEPT

# Allow ICMP source quench.
-A INPUT -p icmp --icmp-type 4 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 4 -j ACCEPT
-A FORWARD -p icmp --icmp-type 4 -j ACCEPT

# Allow ICMP parameter problem.
-A INPUT -p icmp --icmp-type 12 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 12 -j ACCEPT
-A FORWARD -p icmp --icmp-type 12 -j ACCEPT

# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
